<resources>
    <string name="app_name">KrishiSmarak</string>
    <string name="TermsConditions">By continuing you agree to the Terms and Conditions</string>
    <string name="Moto">Aane waale kal ki kheti aaj</string>
    <string name="Title">KrishiSmarak</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a User?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">LOGOUT</string>
    <string name="username">UserName</string>
    <string name="something">Something</string>
    <string name="sign_in_with_email">Sign in With Email</string>
    <string name="google">Google</string>
    <string name="todo">TODO</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="suggestion_box">Suggestion Box :</string>
    <string name="overview">Overview</string>
    <string name="categories">Categories</string>
    <string name="npk_status">NPK Status :</string>
    <string name="nitrogen">Nitrogen(N) -></string>
    <string name="phosphorus">Phosphorus(P) -></string>
    <string name="potassium">Potassium(K) -></string>
    <string name="namaskar">Namaskar</string>
</resources>