<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/ui_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ui_image"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="42sp"
        android:textColor="@color/white"
        android:layout_marginTop="320dp"
        android:layout_marginStart="40dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="380dp"
        android:text="@string/Moto"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>

    <Button
        android:id="@+id/btn_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:onClick="onClick"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/roundestyle"
        android:gravity="center"
        android:text="@string/sign_in_with_email"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="228dp"
        android:background="@drawable/button_corner"
        android:gravity="center"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_number"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button_corner"
        android:gravity="center"
        android:text="@string/phone_number"
        android:onClick="OnClick1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="32dp"
        android:text="@string/TermsConditions"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold">
    </TextView>

</RelativeLayout>