<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namaskar"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="160dp"
            android:background="@drawable/logout_icon"
            android:contentDescription="@string/logout"
            android:onClick="onClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/roundestyle"
            android:paddingTop="4dp"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="1dp"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="33dp"
        android:orientation="vertical"
        android:background="@drawable/roundedbox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/npk_status"
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nitrogen"
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/nitrogenValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/light_white2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phosphorus"
                android:textColor="@color/light_white2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id = "@+id/phosphorusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/light_white2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potassium"
                android:textColor="@color/light_white2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/potassiumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/light_white2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="33dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/roundedbox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_box"
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tvSuggestionBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvSuggestionBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvSuggestionBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/light_white2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</RelativeLayout>